--- a/trello/trello.html
+++ b/trello/trello.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-   <h2>hi there test and new branch</h2> 
+   <h2>hi there test and new branch do conflict</h2> 
 </body>
 </html>
